# sf-release-update

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml  reg_calendar.py  robots.txt  run_scraper.sh  scraper.py
.github/workflows/: auto-merge-dependabot.yml  deploy.yml  ruff-autofix.yml  scrape.yml  test.yml
.understand-anything/: .understandignore  knowledge-graph.json  meta.json
.understand-anything/tmp/: ua-scan-files.json
data/: updates.json
scripts/: build_pages_artifact.sh
sf_release_update.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_scraper.py
